syntax = "proto3";

import "common/location.proto";

message station_identification {
    string id = 1; //uuid
    location location = 2;
    string name = 3;
}